# llm-store

./: .gitignore  README.md  knowledge.md  package-lock.json  package.json  vite.config.ts
.agents/rules/: agents.md
.github/workflows/: ci.yml
docs/: agent-loop-input-to-llm-flow.md
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_add_project.sql  003_registered_models.sql  004_feedback_and_settings.sql  005_knowledge_vectors.sql  006_message_reasoning.sql  007_projects_table.sql  008_knowledge_chunks_fts.sql  009_message_context_payload.sql  010_agent_fs_permissions_v2.sql  011_query_perf_indexes.sql
src-tauri/src/: config.rs  error.rs  lib.rs  state_logger.rs
src-tauri/src/commands/: chat.rs  feedback.rs  knowledge.rs  message.rs  mod.rs  model.rs  pipeline.rs  projects.rs  settings.rs  streaming.rs
src-tauri/src/events/: mod.rs
src-tauri/src/inference/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pipeline/: agent_loop.rs  dedupe_context.rs  input_normalize.rs  llm_invoke_stream.rs  mod.rs  orchestrator.rs  permissions.rs  persist_messages.rs  prompt_build.rs  rag_query.rs  retrieval_plan.rs  types.rs
src-tauri/src/storage/: mod.rs
src/config/: index.ts  schema.ts
src/constants/: index.ts
src/hooks/: useAutoScroll.ts  useChat.ts  useStreaming.test.ts  useStreaming.ts
src/services/: chatService.ts  feedbackService.ts  knowledgeService.ts  messageService.ts  modelService.ts  projectService.ts  settingsService.ts  sseParser.test.ts  sseParser.ts  streamService.test.ts  (+1 more)
(+51 files in other folders)
